<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingActionButtonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_fab_label=""
        app:menu_labels_colorNormal="@color/white"
        app:menu_labels_colorPressed="@color/colorAccent"
        app:menu_labels_textColor="@color/colorPrimaryDark"
        app:menu_openDirection="up"
        app:menu_showShadow="true"
        android:layout_marginLeft="16dp">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/flaotActionItem_calling_sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sos"
            app:fab_label="@string/callin_sos"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/flaotActionItem_place_sos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/mapbox_compass_icon"
            app:fab_label="@string/place_sos"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/flaotActionItem_entreprise_sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_city"
            app:fab_label="@string/app_sanitaire"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/flaotActionItem_entreprise_surcarton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_destination"
            app:fab_label="@string/app_tracqu"
            app:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>


</RelativeLayout>