<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:gravity="center"
    tools:context=".login.Registre">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/image_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_account"
            />

        <!--
             android:visibility="gone"
             -->
        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_login">
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_registre"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                />
            <LinearLayout
                android:id="@+id/linn1"
                android:layout_below="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />
                    <EditText
                        android:id="@+id/regi_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/username"
                        android:inputType="textAutoCorrect"
                        android:textAllCaps="true"
                        android:drawableRight="@drawable/ic_user"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />
                    <EditText
                        android:id="@+id/regi_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/email"
                        android:inputType="textAutoCorrect"
                        android:textAllCaps="true"
                        android:drawableRight="@drawable/ic_contact_mail"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />
                    <EditText
                        android:id="@+id/regi_numbphon"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/phone_number"
                        android:inputType="textAutoCorrect"
                        android:textAllCaps="true"
                        android:drawableRight="@drawable/ic_phone"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/regi_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/Password"
                        android:textAllCaps="true"
                        android:paddingLeft="15dp"
                        android:inputType="numberPassword"
                        android:paddingRight="15dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/white"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/regi_cpassword"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/et_bg"
                            android:fontFamily="sans-serif"
                            android:hint="@string/confirm_password"
                            android:textAllCaps="true"
                            android:paddingLeft="15dp"
                            android:inputType="numberPassword"
                            android:paddingRight="15dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/white"
                            android:textSize="15dp"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>



            </LinearLayout>
            <Button
                android:id="@+id/regi_log"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/app_registre"
                android:layout_below="@+id/linn1"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:background="@drawable/bnt_bg"
                android:textColor="@color/white"
                />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/registre_login"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@color/colorTranspart"
            android:text="@string/login_1"
            android:textAllCaps="true"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/forger_login"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@color/colorTranspart"
            android:text="Forger password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</RelativeLayout>