<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg">

        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">
        <ImageView
            android:id="@+id/image_login"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/sos"
            />

        <!--
             android:visibility="gone"
             -->
        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/image_login">
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                />
            <LinearLayout
                android:id="@+id/linn1"
                android:layout_below="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/username"
                        android:inputType="textAutoCorrect"
                        android:textAllCaps="true"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="15dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif"
                        android:hint="@string/Password"
                        android:textColorHint="@android:color/white"
                        android:textAllCaps="true"
                        android:paddingLeft="15dp"
                        android:inputType="numberPassword"
                        android:paddingRight="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/login_lodin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/login"
                android:layout_below="@+id/linn1"
                android:textAllCaps="false"
                android:layout_marginTop="50dp"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:background="@drawable/bnt_bg"
                android:textColor="@color/white"
                />
        </RelativeLayout>
        </RelativeLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_above="@id/rellay2"/>
        <RelativeLayout
            android:id="@+id/rellay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/registre_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTranspart"
                android:text="sing up"
                android:textAllCaps="true"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/forger_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorTranspart"
                android:text="Forger password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

</RelativeLayout>